# alterdune

./: .gitignore  CMakeLists.txt  README.md  Rendu TD11.docx  requirements.txt
assets/: README.md
data/: items.csv  monsters.csv
docs/: ASSET_INTEGRATION.md  DESIGN.md  FRONTEND.md  UI_MOCKUP.txt
include/: ActAction.h  BestiaryEntry.h  Entity.h  FrontendApp.h  FrontendViewModels.h  Game.h  Item.h  Monster.h  Player.h
src/: ActAction.cpp  BestiaryEntry.cpp  Entity.cpp  FrontendApp.cpp  Game.cpp  Item.cpp  Monster.cpp  Player.cpp  frontend_main.cpp  main.cpp
